# MCP-RAG

./: .env.example  Dockerfile  Implementation.md  README.md  TEST_RESULTS.md  crawled_pages.sql  crawled_pages_multimodel.sql  pyproject.toml  simple_test_examples.py  test_examples.py  test_gemini.py  test_mcp_functionality.py
src/: crawl4ai_mcp.py  utils.py
src/agents/: __init__.py  base_agent.py  code_debugger.py  dependency_validator.py  evolution_orchestrator.py  integration_tester.py
src/embeddings/: __init__.py  base.py  cohere_provider.py  huggingface_provider.py  manager.py  ollama_provider.py  openai_provider.py
src/evaluation/: __init__.py  correctness_evaluator.py
src/evolution/: __init__.py  version_control.py
src/llm/: __init__.py  base.py  huggingface_llm.py  manager.py  ollama_llm.py
src/resource_management/: __init__.py  manager.py
src/security/: __init__.py  sandbox.py
src/testing/: __init__.py  automated_tester.py
src/visual/: __init__.py  colpali_processor.py
