[project]
name = "mcp-crawl4ai-rag"
version = "0.1.0"
description = "MCP server to crawl all documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "dotenv==0.9.9",
    "mcp==1.7.1",
    "openai==1.71.0",
    "sentence-transformers>=4.1.0",
    "supabase==2.15.1",
    "langgraph>=0.1.0",
    "mem0>=0.1.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
    "packaging>=23.0",
    "gitpython>=3.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
