[project]
name = "mcp-crawl4ai-rag"
version = "0.1.0"
description = "MCP server to crawl all documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "python-dotenv>=1.0.0",
    "mcp==1.7.1",
    "openai==1.71.0",
    "supabase==2.15.1",
    "langgraph>=0.1.0",
    "mem0>=0.1.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
    "packaging>=23.0",
    "gitpython>=3.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
cohere = ["cohere>=5.0.0"]
huggingface = ["sentence-transformers>=3.0.0", "huggingface-hub>=0.20.0", "transformers>=4.36.0", "torch>=2.0.0", "accelerate>=0.25.0"]
colpali = ["colpali-engine>=0.2.0", "pillow>=10.0.0"]
quantization = ["bitsandbytes>=0.41.0"]
all = [
    "cohere>=5.0.0", 
    "sentence-transformers>=3.0.0", 
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "colpali-engine>=0.2.0",
    "pillow>=10.0.0",
    "bitsandbytes>=0.41.0"
]
